Role and users Models Created

--- a/appointment/src/main/resources/application.properties
+++ b/appointment/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/appointment
-spring.datasource.username=parkash
+spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
