backend updation for login

--- a/appointment/src/main/resources/application.properties
+++ b/appointment/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/appointSys
+spring.datasource.url=jdbc:postgresql://localhost:5432/StudentAppointmentSys
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.jpa.show-sql=true
